erDiagram
    User {
        int id PK
        string email UK
        string first_name
        string last_name
        boolean is_active
        boolean is_staff
        datetime date_joined
        image avatar
    }

    Category {
        int id PK
        string name UK
        string slug UK
    }

    Tag {
        int id PK
        string name UK
        string slug UK
    }

    Post {
        int id PK
        int author_id FK
        string title
        string slug UK
        text body
        int category_id FK
        string status
        datetime created_at
        datetime updated_at
    }

    Comment {
        int id PK
        int post_id FK
        int author_id FK
        text body
        datetime created_at
    }

    Post_Tags {
        int post_id FK
        int tag_id FK
    }

    User ||--o{ Post : "writes"
    User ||--o{ Comment : "writes"
    Category ||--o{ Post : "contains"
    Post ||--o{ Comment : "has"
    Post ||--|{ Post_Tags : "has"
    Tag ||--|{ Post_Tags : "has"